--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -5,13 +5,12 @@
 
     h3 {
         align-self: center;
-        margin-bottom: 5%;
     }
 }
 
 .project-container {
     display: flex;
-    padding: 5% 0;
+    padding: 8% 0;
     border-bottom: 2px solid $lightGrey;
     
     .project-image {
@@ -20,7 +19,7 @@
 
     .project-text {
         width: 60%;
-        padding: 0 2% 2% 2%;
+        padding: 0 2% 0 2%;
     }
 
     h4 {
@@ -33,6 +32,10 @@
         &:nth-of-type(1),
         &:nth-of-type(3){
             font-weight: 800;
+        }
+
+        &.stacks {
+            margin-bottom: 0;
         }
 
         a:hover {
